GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

============================================================

PyKota NEWS :

    - 1.20alpha2 :
    
        - First version of ESC/P2 analyzer. Seems to work
          ok at least with 'epson', 'epsonc', 'eps9mid' 
          and 'esp9high' ghostscript devices. Needs more
          work to correctly analyze other devices.
        
    - 1.20alpha1 : 
    
        - Fixed problem with number of copies in PCLXL parser.
        
        - Fixed problem with number of copies in PCL5 parser,
          when number of copies was set outside of and before first
          page.
        
        - Added workaround for number of copies directly set in
          PostScript code.
          
        - Added german translation.
        
        - Fixed problem on first print for user group quota when
          "enforcement: strict" is used.
        
        - Fixed interpolation problem in french translation.
        
    - 1.19 :
    
        - Updated existing translations.    
        
        - Added final Thai and Greek translations.
        
        - Minor last minute bug fixes.
        
    - 1.19beta :
    
        - LPRng support for both software and hardware accounting seems
          to be OK.
          
        - Translation files fixed because of fuzzy matching problem.  
        
        - Fixed path to Swedish translation: 'sv' instead of 'se'.
        
        - Added first draft of Thai translation.
        
        - Fixed some minor bugs with Pychecker.
        
    - 1.19alpha35 :
    
        - Generic PDL analyzer now supports Binary PostScript documents
          in addition to DSC compliant ones.
        
    - 1.19alpha34 :
    
        - LPRng support : software accounting seems to work fine,